--- a/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
           - - - - - - - - - - - - - - - -->
-    <!-- TODO (1) Add Strings for checkbox preference -->
 
     <!-- Value in SharedPreferences for red color option -->
     <string name="pref_color_red_value" translatable="false">red</string>
@@ -16,4 +15,17 @@
 
     <!-- Value in SharedPreferences for green color option -->
     <string name="pref_color_green_value" translatable="false">green</string>
+
+    <!-- labels for checkbox preferences, no need to translate keys-->
+    <string name="pref_show_bass_label">Show Bass</string>
+    <string name="pref_show_bass_key" translatable="false">show_bass</string>
+    <string name="pref_show_mid_label">Show Mid</string>
+    <string name="pref_show_mid_key" translatable="false">show_mid</string>
+    <string name="pref_show_treble_label">Show Treble</string>
+    <string name="pref_show_treble_key" translatable="false">show_treble</string>
+
+    <!-- Summary off and on strings -->
+    <string name="pref_show_summary_on">Shown</string>
+    <string name="pref_show_summary_off">Hidden</string>
+
 </resources>
