--- a/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
@@ -25,8 +25,12 @@
     <!-- Summary for Checkboxes -->
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
-
-
+    
+    
+    <!-- for EditTextPreference-->
+    <string name="pref_size_label">Size Multiplier</string>
+    <string name="pref_size_default" translatable="false">1</string>
+    <string name="pref_size_key" translatable="false">size</string>
     <!-- Label for the color preference -->
     <string name="pref_color_label">Shape Color</string>
 
